# OptionSniper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
examples/: README.txt
src/sellput_checker/: app.py  calculations.py  checklist.py  cli.py  data_models.py  utils.py  yahoo_client.py
src/sellput_checker/pages/: covered_call.py  iron_butterfly.py  iron_condor.py  sell_put.py
tests/: test_calculations.py
