[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sellput-checker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.37",
  "pandas>=2.2",
  "numpy>=1.26",
  "yfinance>=0.2",
  "requests>=2.32",
  "scipy>=1.12"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sellput_checker"]
include-package-data = true
